[package]
name = "claude-meter"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal Claude Code statusline — context bar, 5h bar, and 7-day rolling sparkline."
repository = "https://github.com/afarrell/claude-meter"
authors = ["Alex Farrell <alex_farrell@mac.com>"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
